        directory `/etc/package-includes/` and delete directories
        `zope/app/layers/`and `zope/app/skins/`.

      - Removed internal concept of 'warnings' from TAL interpreter as it
        wasn't used at all and does not belong to any public interface.

      - Removed some cruft from pre-3.0 page templates (The concept of `usage`
        was removed back then already.)

    Bug fixes

      - Generate an ObjectCreatedEvent when the root object is created.

      - More or less fixed the static apidoc generator. (fix + workaround).

      - Fixed issue 705, double URL unquoting of GET parameters in
        functional tests.

      - Fixed issue 676, utilities defined in Zope 3.2 weren't
        converted properly.

      - Fixed issue 675, Pluggable Authentication utilities with group
        folders weren't updated correctly to replect the new database
        format.

      - Fixed issue 663, adding basic auth and session-credential
        plugins didn't work.

      - Fixed issue 650, a test failure on Mac OS X that seemed to
        indicate deeper problems in ZEO's thread handling.  Refactored
        ZEO so that ZEO clients have their own asyncore loop and don't
        need two separate networking modes.

        As part of this, some bugs in connection management that
        weren't tested in asynchronous mode were fixed.

        Added a heart-beat to try to detect lost server connections in
        situations where such disconnections are not reported by the OS. 

      - Fixed issue 664, apidoc didn't properly handle attributes that
        showd up in dir() but that weren't gettable.

      - Fixed issue 604, Mutable schemas were accidentally included in
        the 3.2 release even though they weren't ready and didn't
        work. They are not included in the 3.3 release.

      - Fixed issue 564: binary set operations didn't work on proxied sets.

      - Fixed issue 572: Dict fields with key_type or value_type set